# docsherpa

./: .env.default  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: agile-task.md  bug_report.md
chroma_db/3e1c9049-8660-4995-adbf-9778d5124228/: index_metadata.pickle
local_data/: test.txt
src/: chat.py  main.py  resources.py
src/crawlers/: readthedocs.py
src/ingestion/: feed_md.py  load_file.py  load_file_to_documents.py  test.ipynb
src/ingestion/chroma/: chroma.sqlite3
src/retreive/: chat_engine.py  simple_chat.py
